# VEGraphices

./: .gitignore  CMakeLists.txt  VEGraphices.sln  token.txt
GIS_Wrapper/: AlgorithmInterface.cpp  AlgorithmInterface.h  AnalysisExponent.cpp  AnalysisExponent.h  AnalysisStationFile.cpp  AnalysisStationFile.h  CIPASException.cpp  CIPASException.h  CIPASMessageBox.cpp  CIPASMessageBox.h  CIPScene.cpp  CIPScene.h  CLineAnalysis.cpp  CLineAnalysis.h  CMakeLists.txt  CPolygonAnalysis.cpp  CPolygonAnalysis.h  CipasField.cpp  CipasField.h  Circlip.cpp  Circlip.h  ColorCardLegend.cpp  ColorCardLegend.h  ConcavePolygon.cpp  ConcavePolygon.h  Const.h  Contour.cpp  ContourData.cpp  ContourData.h  ContourLayer.cpp  ContourLayer.h  ContourLegend.cpp  ContourLegend.h  ContourShadedLayer.cpp  ContourShadedLayer.h  ConvertExponentToCipasFormat.cpp  ConvertExponentToCipasFormat.h  CoordinateTransform.cpp  CoordinateTransform.h  CressmanInterpolation.cpp  (+154 more)
QE_lib/: CMakeLists.txt  CardinalSpline.cpp  CardinalSpline.h  ColorAttribute.cpp  ColorAttribute.h  Config.h  DivisionData.cpp  DivisionData.h  DrawSurface.cpp  DrawSurface.h  GLTransform.cpp  GLTransform.h  GL_Include.h  LineStippleAttribute.cpp  LineStippleAttribute.h  LineWidthAttribute.cpp  LineWidthAttribute.h  NccPoint.h  Nccclosedcontour.cpp  Nccclosedcontour.h  Nccstation.cpp  Nccstation.h  PixelBufferSurface.cpp  PixelBufferSurface.h  PointSizeAttribute.cpp  PointSizeAttribute.h  PolygonCut.cpp  ProjectionTransform.cpp  ProjectionTransform.h  QAccessor.cpp  QAccessor.h  QAttribute.cpp  QAttribute.h  QAttributeSet.cpp  QAttributeSet.h  QBitmapText.cpp  QBitmapText.h  QCamera.cpp  QCamera.h  QDataArray.h  (+71 more)
simple/: CMakeLists.txt  MyWidget.cpp  MyWidget.h  Sphere.cpp  Sphere.h  main.cpp  simpleax.vcxproj  simpleax.vcxproj.filters
